[gd_scene load_steps=3 format=2]

[ext_resource path="res://Data/Others/pstheme.tres" type="Theme" id=1]
[ext_resource path="res://Data/Code/pause.gd" type="Script" id=2]

[node name="Pause State" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.164706, 0.164706, 0.662745 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -96.0
margin_right = 112.0
margin_bottom = 96.0
theme = ExtResource( 1 )
custom_constants/separation = 16
alignment = 1

[node name="Return" type="Button" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 224.0
margin_bottom = 69.0
text = "Return"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 224.0
margin_bottom = 107.0
text = "Restart"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 224.0
margin_bottom = 145.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
